--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  // "name": "React-Portfolio",
+  "name": "React-Portfolio",
   "version": "0.1.0",
   "private": true,
-  // "homepage": "https://github.com/sultyl/React-Portfolio",
+  "homepage": "https://github.com/sultyl/React-Portfolio",
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
     "@testing-library/jest-dom": "^5.16.5",
